implement feedbacks from reviewers

--- a/ai/Megatron/English/Python/Start_Here.ipynb
+++ b/ai/Megatron/English/Python/Start_Here.ipynb
@@ -6,10 +6,24 @@
    "source": [
     "# Megatron GPT Bootcamp\n",
     "\n",
-    "## Learning objectives\n",
+    "## Learning objectives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This objective of this bootcamp is designed to onborad you with NVIDIA [Megatron-LM](https://github.com/NVIDIA/Megatron-LM) in a step-wised manner. We will give you the necessary tools and knoweldge to kick-start training your own language model. \n",
     "\n",
-    "This objective of the bootcamp is to first, help you quickly go through one time the default Magatron workflow to let you familiarize on how Megatron works, thereafter we will be focus on catering to the specifics of local langauge needs, in this case Swedish. We will give recommandations/advices which can be optionally applied to your workflow and include some practical, useful scripts to help you kick-start your own journey in training local langauge Megatron GPT2/3 models. \n",
+    "More specifically, In Day 2, We will learn the default [Megatron-LM](https://github.com/NVIDIA/Megatron-LM)'s workflow, highlighting :\n",
     "\n",
+    "   - Given a fixed dataset ( measured by # of tokens ) calculate compute needs in order to plan training runs and request resources.\n",
+    "    \n",
+    "   - Understanding Megatron-LM's core engine - Model Parallel Unit, this is the key which enable the possibility to train model with up to 1 trillion parameters on a superPOD.\n",
+    "    \n",
+    "   - Profiling : as we scale, it is important to maintain the performance of GPUs utilization across multi-gpus or multi-node runs.\n",
+    "\n",
+    "In Day 3, we will shift our focus on all the customization we need to incoporate into [Megatron-LM](https://github.com/NVIDIA/Megatron-LM)'s workflow, in order to cater for local langauge needs, in this case Swedish. We will give recommandations which can be optionally applied to your workflow and include some practical, useful scripts to help you kick-start your own journey in training local langauge Megatron GPT2/3 models. \n",
     "\n",
     "* Standard: Python\n",
     "* Frameworks: Pytorch + Megatron-LM \n",
@@ -24,7 +38,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## check how many GPUs you have and GPU Mem capacity \n",
+    "### Check # of GPUs you have and GPU memory capacity \n",
     "\n",
     "            Wed Aug 25 07:03:55 2021       \n",
     "        +-----------------------------------------------------------------------------+\n",
@@ -96,8 +110,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## verify nvlink active \n",
-    "OUTPUT should look something simialr to the below -\n",
+    "### Verify NVlink is active \n",
+    "OUTPUT should look simialr to the below -\n",
     "\n",
     "        GPU 0: Tesla V100-SXM2-16GB (UUID: GPU-b29deceb-3745-51d2-2cf3-807ea8ac8e60)\n",
     "             Link 0: 25.781 GB/s\n",
@@ -154,7 +168,7 @@
     }
    ],
    "source": [
-    "# verify nvlink status\n",
+    "### verify nvlink status\n",
     "!nvidia-smi nvlink --status"
    ]
   },
@@ -163,7 +177,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## verify profiling capability \n",
+    "### Verify Profiling Capability \n",
     "OUTPUT should look something simialr to the below\n",
     "note that we want all environment check pass ( = OK or available )\n",
     "\n",
@@ -208,7 +222,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## making placeholder folders for dataset"
+    "### Making Placeholder folders for dataset"
    ]
   },
   {
@@ -233,8 +247,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# create your own data - web crawling \n",
-    "please go through the notebook [link here](./jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-Website_scrapping.ipynb) to scrape NVIDIA blog's data "
+    "## Create Your Own Data - Web Crawling \n",
+    "It is mandatory to fetch your own data via web crawling NVIDIA blogs webpages, extracting raw text from the webpage. \n",
+    "Please make sure you go through the notebook **[link here](./jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-Website_scrapping.ipynb)** to scrape raw text from NVIDIA blogs' webpages. "
    ]
   },
   {
