--- a/ai/Megatron/English/Python/jupyter_notebook/Day2-1_EstimateComputeDaysNeeded.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day2-1_EstimateComputeDaysNeeded.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "proud-packet",
+   "id": "strong-match",
    "metadata": {},
    "source": [
-    "# \n",
-    "\n",
-    "# 1_Estimate compute hours/days needed to execute one end-to-end run\n",
+    "# Estimate compute hours/days needed to execute one end-to-end run\n",
     "---\n",
     "\n",
     "## Learning Objectives\n",
-    "- **The goal of this lab is to:**\n",
-    "Understand how reserve compute resource per given data volume + model configuration for a training run. This is important not only for cluster capacity planning as well as for strategic research planning ( how many end to end experiments one can run given the compute capacity and duration )\n",
+    "The goal of this lab is size the problem :\n",
+    "Understanding how to calculate hours/days needed in order to reserve compute resources for the training job per given existing data volume and desired model size. \n",
+    "It is important for both the admin in the compute cluster to do capacity forecasting and for researchers to plan their experiments strategically.\n",
     "\n",
-    "    - Extracting the formular in from the paper [Efficient Large-Scale Language Model Training on GPU Clusters](https://arxiv.org/pdf/2104.04473.pdf), per given [GPT3 variants](https://arxiv.org/pdf/2005.14165.pdf) based on assumed [Teraflops reference table](https://arxiv.org/pdf/2104.04473.pdf)\n",
-    "    - Understanding how to estimate compute needed per dataset volume ( measured in number of tokens ) \n",
-    "    - Apply to your own/ imagenary data volume and and compute cluster set-ups\n",
+    "- Extracting the formular from the paper [Efficient Large-Scale Language Model Training on GPU Clusters](https://arxiv.org/pdf/2104.04473.pdf), per given [GPT3 variants](https://arxiv.org/pdf/2005.14165.pdf) based on assumed [Teraflops reference table](https://arxiv.org/pdf/2104.04473.pdf)\n",
+    "\n",
+    "- Understanding how to estimate compute resource needed per dataset volume ( measured in # of tokens ) and a chosen model size\n",
+    "\n",
+    "- Apply to your own imagenary data volume and a figurative compute cluster set-ups\n",
     "---------------------------------------------------------------------------------------------------\n",
     "\n",
     "- assuming the following information \n",
@@ -25,6 +26,7 @@
     "- n = number of GPUs in the compute cluster\n",
     "- x = achieved teraflops per GPU \n",
     "\n",
+    "Training time (in seconds) is approximated with this equation : 8*T*P/n*X\n",
     "you will need the following tables from the above papers for the estimation \n",
     "\n",
     "<center><img src=\"./Megatron-LM/pics/GPT3_all.png\" width=\"700\"/></center>\n",
@@ -36,22 +38,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "political-oriental",
+   "id": "pregnant-basket",
    "metadata": {},
    "source": [
     "---\n",
-    "## let's do a sanity check \n",
-    "scenario 1 - Given 300Billion tokens , 1024 GPUs, with 175 Billion model parmeters , assuming 140 teraFLOP/s per GPU \n",
-    "we should observe around **34 days** for an end to end training run\n",
+    "## let's do a sanity check - \n",
     "\n",
-    "scenario 2 - Given 450Billion tokens , 3072 GPUs, with 1 Trillion model parmeters , assuming 163 teraFLOP/s per GPU \n",
-    "we should observe around **84 days** for an end to end training run\n"
+    "**Assumption** : you have an existing dataset, you know the volume of the dataset ( measure in # of tokens )\n",
+    "\n",
+    "**Scenario 1** - Given 300Billion tokens, you want to train 175 Billion GPT3 model, you have access to 1024 GPUs, look up on the table above to fetch 140 teraFLOP/s per GPU\n",
+    "\n",
+    "Question : How many hours/ days will you need given the scenaio above for you to compute an end to end training job ?\n",
+    "\n",
+    "Answer : We should observe around **34 days** for an end to end training run\n",
+    "\n",
+    "--\n",
+    "\n",
+    "**scenario 2** - You increase the data volume to 450 Billion tokens, you want to train a big model, say 1 Trillion parameters, you have access to 3072 GPUs, and fetching the 163 teraFLOP/s per GPU from the table above\n",
+    "\n",
+    "Question: How many hours/ days will you need given this scenaio above for you to compute an end to end training job ?\n",
+    "\n",
+    "Answer: We should observe around **84 days** for an end to end training run\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "linear-collector",
+   "id": "played-broadcast",
    "metadata": {},
    "outputs": [
     {
@@ -71,12 +84,15 @@
    ],
    "source": [
     "import numpy as np\n",
+    "# T = dataset size measured in numbers of tokens in the dataset\n",
+    "# P = model parameters for GPT3 varients\n",
+    "# n = number of GPUs in the compute cluster\n",
+    "# x = achieved teraflops per GPU \n",
     "\n",
     "def calculate_days_needed(T , P , n ,x):\n",
     "    if x is None:\n",
     "        return 'not a good SuperPOD use case, let us try a bigger model :)'\n",
-    "    else:\n",
-    "        #x=140*1e+12 # TeraFlop/s per GPU\n",
+    "    else:        \n",
     "        tot=8*T*P\n",
     "        div=n*x\n",
     "        compute_sec=tot/div\n",
@@ -100,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fancy-hollywood",
+   "id": "ruled-score",
    "metadata": {},
    "source": [
     "---\n",
@@ -116,12 +132,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "interior-technology",
+   "id": "circular-northwest",
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     }
    },
    "outputs": [
@@ -146,7 +161,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distinguished-electricity",
+   "id": "peaceful-colorado",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "## Additional Resources\n",
+    "\n",
+    "Efficient Large-Scale Language Model Training on GPU Clusters : https://arxiv.org/pdf/2104.04473.pdf \n",
+    "\n",
+    "Language Models are Few-Shot Learners : https://arxiv.org/pdf/2005.14165.pdf\n",
+    "\n",
+    "Scaling Laws for Neural Language Models : https://arxiv.org/pdf/2001.08361.pdf\n",
+    "\n",
+    "<left><img src=\"./Megatron-LM/pics/data_loss_model_size_compute.JPG\" width=\"700\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "northern-fellowship",
    "metadata": {},
    "source": [
     "---\n",
@@ -160,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brilliant-delta",
+   "id": "linear-culture",
    "metadata": {},
    "source": [
     "-----\n",
