--- a/ai/Megatron/English/Python/jupyter_notebook/Day2-2_MegatronFundementals.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day2-2_MegatronFundementals.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "vocational-baseball",
+   "id": "prerequisite-disaster",
    "metadata": {},
    "source": [
-    "# \n",
-    "\n",
-    "#  2_Understanding Megatron core - mpu\n",
+    "#  Understanding Megatron-LM's core - MPU\n",
     "---\n",
-    "NVIDIA's Megatron-LM makes training very large langauge models ( up to a trillion params model) for own language a reality, Megatron-LM's core mpu ( model paralleism unit ) is the basis for all subsequence branching efforts on training very large models, such as [DeepSpeed](https://www.deepspeed.ai/features/#model-parallelism).\n",
+    "NVIDIA's Megatron-LM makes training very large langauge models ( up to one trillion parameters ) a reality, Megatron-LM's core MPU ( Model Paralleism Unit ) forms the base for all subsequence optimization efforts on training very large models, such as [DeepSpeed](https://www.deepspeed.ai/features/#model-parallelism).\n",
     "\n",
-    "However, the common side effect is that one could easily suffer from low GPUs utilization when configure Megatron GPT training runs with insufficient configuraitons.( see below an example traiing run with insufficient configurations that result in low or inconsistent gpu utils in training !\n",
+    "However, the common side effect is that, with a bad training configuration, one could easily suffer from low GPUs utilization( screenshots below as an example of a bad training configuration which resulted in low or inconsistent gpus utilization).\n",
     "\n",
     "Therefore, we will be taking our very first step of understanding how the core of Megatron-LM's mpu works and thereafter\n",
     "taking a closer look on  Megatron-LM's training runs performance. \n",
@@ -19,19 +17,20 @@
     "![a training run with low or inconsistent gpus utils example](./Megatron-LM/pics/naive_run.JPG)\n",
     "\n",
     "## Learning Objectives\n",
-    "- **The goal of this lab is to understand the core of Megatron's mpu = model parallelism unit works **\n",
-    "    - How Megatron group GPU-affinity per model parallel configuration ( pipeline parallel | tensor parallel )\n",
-    "    - Tensor Parallel : Column Parallel\n",
-    "    - Tensor Parallel : Row Parallel\n"
+    "The goal of this lab is to understand the core of Megatron-LM's mpu = model parallelism unit works\n",
+    "\n",
+    "- How Megatron-LM is groupping GPU-affinity per model parallel configuration ( pipeline parallel | tensor parallel )\n",
+    "- Tensor Parallel : Column Parallel\n",
+    "- Tensor Parallel : Row Parallel\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "democratic-disclosure",
+   "id": "peaceful-article",
    "metadata": {},
    "source": [
     "---------------------------------------------------------------------------\n",
-    "## How Megatron group GPU-affinity per model-data parallel configuration\n",
+    "## How Megatron-LM is groupping GPU-affinity per model-data parallel configuration\n",
     "\n",
     "Parallelism : Model & Data \n",
     "- p = Pipeline Model Parallel  \n",
@@ -39,7 +38,7 @@
     "- d = Data Parallal \n",
     "- n = Total number of GPUs used in the training\n",
     "\n",
-    "#### Megatron requires p * t * d = n\n",
+    "**Note : Megatron-LM requires p * t * d = n**\n",
     "\n",
     "Parallel group - grouping for torch distributed  (NCCL)\n",
     "- num_tensor_model_parallel_groups = n / t\n",
@@ -56,7 +55,7 @@
     "\n",
     "therefore, world_size=16  \n",
     "\n",
-    "then accoridng to Megatron [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) we should see the following ...\n",
+    "then accoridng to Megatron-LM [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) we should see the following ...\n",
     "\n",
     "    8 data_parallel groups:\n",
     "        [g0, g2], [g1, g3], [g4, g6], [g5, g7], [g8, g10], [g9, g11], [g12, g14], [g13, g15]\n",
@@ -65,8 +64,8 @@
     "    4 pipeline model-parallel groups:\n",
     "        [g0, g4, g8, g12], [g1, g5, g9, g13], [g2, g6, g10, g14], [g3, g7, g11, g15]\n",
     "\n",
-    "Note that for efficiency, the caller should make sure adjacent ranks\n",
-    "are on the same DGX box. \n",
+    "**Note that for efficiency, the caller should make sure adjacent ranks are on the same DGX box.**\n",
+    "\n",
     "For example if we are using 2 DGX-1 boxes\n",
     "with a total of 16 GPUs, rank 0 to 7 belong to the first box and\n",
     "ranks 8 to 15 belong to the second box."
@@ -75,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "passive-dependence",
+   "id": "reflected-israeli",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,13 +149,12 @@
     "    print(\"Total :{} full models being partitioned into :{} GPUs \".format(len(_MODEL_PARALLEL_GROUP),world_size))\n",
     "    for idx, m in zip(range(len(_MODEL_PARALLEL_GROUP)),_MODEL_PARALLEL_GROUP):\n",
     "        m=[str(l) for l in m]\n",
-    "        print(\"model {} : is partitioned into gpus :{}\".format(str(idx),','.join(m)))   \n",
-    "\n"
+    "        print(\"model {} : is partitioned into gpus :{}\".format(str(idx),','.join(m)))   \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "natural-genetics",
+   "id": "moving-strip",
    "metadata": {},
    "source": [
     "---\n",
@@ -177,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "residential-action",
+   "id": "promotional-stack",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "likely-visiting",
+   "id": "loose-haven",
    "metadata": {},
    "outputs": [
     {
@@ -259,11 +257,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bright-companion",
+   "id": "nearby-immunology",
    "metadata": {},
    "source": [
     "----------------------------------------------------------------------\n",
-    "## Megatron Column Parallel \n",
+    "## Megatron-LM's Column Parallel \n",
     "[ColumnParallel reference](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/layers.py#L201)\n",
     "![ColumnParallel](./Megatron-LM/pics/ColumnParallel.JPG)"
    ]
@@ -271,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "closing-louisville",
+   "id": "consolidated-operation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bizarre-remedy",
+   "id": "expressed-builder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "recent-cradle",
+   "id": "elect-detail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divine-morris",
+   "id": "dress-proportion",
    "metadata": {},
    "source": [
     "## Peek inside Column Parallel Class"
@@ -470,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "sound-privacy",
+   "id": "german-method",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "continental-quarter",
+   "id": "ethical-secondary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "integral-cause",
+   "id": "republican-saint",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "impressive-watts",
+   "id": "sealed-eclipse",
    "metadata": {},
    "outputs": [
     {
@@ -555,11 +553,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "explicit-mother",
+   "id": "played-romantic",
    "metadata": {},
    "source": [
     "----------------------------------------------------------------------\n",
-    "## Megatron Row Parallel \n",
+    "## Megatron-LM's Row Parallel \n",
     "[RowParallel reference](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/layers.py#L294)\n",
     "![RowParallel](./Megatron-LM/pics/RowParallel.JPG)"
    ]
@@ -567,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "owned-pixel",
+   "id": "logical-union",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,27 +672,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "latin-persian",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16.0"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 74,
-   "id": "sudden-tokyo",
+   "id": "annual-commonwealth",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "prompt-victoria",
+   "id": "complex-ultimate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "mysterious-bishop",
+   "id": "neither-johnson",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +754,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "effective-premises",
+   "id": "wired-contents",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "## Additional Resources\n",
+    "\n",
+    "Efficient Large-Scale Language Model Training on GPU Clusters : https://arxiv.org/pdf/2104.04473.pdf \n",
+    "\n",
+    "Pushing Forward the Frontiers of Natural Language Processing : https://blogs.nvidia.com/blog/2021/09/16/nlp-frontiers-ai-hardware-summit/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "patent-caution",
    "metadata": {},
    "source": [
     "---\n",
@@ -787,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surprising-utilization",
+   "id": "together-paragraph",
    "metadata": {},
    "source": [
     "-----\n",
