--- a/ai/Megatron/English/Python/jupyter_notebook/Day2-3_GPT_vocab_merge_files.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day2-3_GPT_vocab_merge_files.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "maritime-macro",
+   "id": "strong-deadline",
    "metadata": {},
    "source": [
-    "# \n",
+    "<img src=http://developer.download.nvidia.com/compute/machine-learning/frameworks/nvidia_logo.png style=\"width: 90px; float: right;\">\n",
     "\n",
-    "# 3_About GPT vocab and merge files\n",
+    "# About GPT vocab and merge files\n",
     "---\n",
     "\n",
     "## Learning Objectives\n",
-    "- **The goal of this lab is to:**\n",
-    "    - the difference between BPE and GPTBPE Tokenizer\n",
-    "    - load and verify GPTBPE Tokenizer can do tokenization as expected \n",
+    "The goal of this lab is to:\n",
+    "\n",
+    "- the difference between BPE and GPTBPE Tokenizer\n",
+    "- load and verify GPTBPE Tokenizer can do tokenization as expected \n",
     "\n",
     "\n",
-    "Download the GPT vocab and merge files \n",
+    "Note: Please proceed to download the GPT vocab and merge files \n",
     "\n",
     "Download vocab file [English_vocab](https://s3.amazonaws.com/models.huggingface.co/bert/gpt2-vocab.json)\n",
     "\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compliant-champion",
+   "id": "level-trigger",
    "metadata": {},
    "source": [
     "#### let's review the source code of [gpt2 tokenizer](https://huggingface.co/transformers/_modules/transformers/tokenization_gpt2.html)\n",
@@ -47,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "thrown-aurora",
+   "id": "mysterious-favorite",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "critical-apparel",
+   "id": "shaped-mercury",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "circular-covering",
+   "id": "traditional-triangle",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liked-reach",
+   "id": "disciplinary-journalist",
    "metadata": {},
    "source": [
     "## examine the vocab and merge files"
@@ -224,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bored-standing",
+   "id": "accomplished-builder",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "driven-coaching",
+   "id": "dependent-bridge",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "celtic-cheese",
+   "id": "imperial-setting",
    "metadata": {},
    "source": [
     "## sanity check load from transformer GPT2Tokenizer "
@@ -280,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "handled-cooper",
+   "id": "corresponding-yugoslavia",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "electrical-performance",
+   "id": "overhead-philip",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "funny-scheduling",
+   "id": "interpreted-termination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +385,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "placed-necessity",
+   "id": "vulnerable-outside",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "## Additional Resources\n",
+    "\n",
+    "HuggingFace Tokenizer Documentation : https://huggingface.co/docs/tokenizers/python/latest/quicktour.html\n",
+    "\n",
+    "Train GPT-2 in your own langauge : https://towardsdatascience.com/train-gpt-2-in-your-own-language-fc6ad4d60171"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aquatic-blanket",
    "metadata": {},
    "source": [
     "---\n",
@@ -398,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respected-class",
+   "id": "injured-pursuit",
    "metadata": {},
    "source": [
     "-----\n",
