--- a/ai/Megatron/English/Python/jupyter_notebook/Day2-4_jsonfy_and_process2mmap.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day2-4_jsonfy_and_process2mmap.ipynb
@@ -2,12 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dependent-chemistry",
+   "id": "fifteen-channel",
    "metadata": {},
    "source": [
-    "# \n",
-    "\n",
-    "# 4_Jsonfy and preprocess to mmap format for optimizing data loading\n",
+    "# Jsonfy and preprocess to mmap format for optimizing data loading\n",
     "---\n",
     "\n",
     "## Learning Objectives\n",
@@ -24,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "square-louisville",
+   "id": "governing-country",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "human-appliance",
+   "id": "mysterious-hazard",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "heard-baseball",
+   "id": "designed-swaziland",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dynamic-nudist",
+   "id": "sublime-beaver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "soviet-jumping",
+   "id": "aggressive-victim",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acting-covering",
+   "id": "specific-scheduling",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -114,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "organic-malaysia",
+   "id": "powered-cooking",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rubber-absolute",
+   "id": "marine-packing",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lined-transfer",
+   "id": "complete-rebate",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -203,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "marked-midnight",
+   "id": "resident-convert",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "adjustable-hammer",
+   "id": "integrated-bridges",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hidden-patrick",
+   "id": "supported-celtic",
    "metadata": {},
    "source": [
     "---\n",
@@ -271,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "professional-lawyer",
+   "id": "familiar-victorian",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +332,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valuable-equilibrium",
+   "id": "tropical-gathering",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "## Additional Resources\n",
+    "\n",
+    "Read More on MMAP  : https://docs.python.org/3/library/mmap.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "solid-reminder",
    "metadata": {},
    "source": [
     "---\n",
@@ -348,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-drinking",
+   "id": "occupational-ranking",
    "metadata": {},
    "source": [
     "-----\n",
