--- a/ai/Megatron/English/Python/jupyter_notebook/Day2-5_Observe_GPT_runs_vs_performance.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day2-5_Observe_GPT_runs_vs_performance.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "crude-morning",
+   "id": "worth-conversation",
    "metadata": {},
    "source": [
-    "# \n",
-    "\n",
-    "# 5 Monitor GPT training performance with varying config\n",
+    "# Monitor GPT training performance with varying config\n",
     "---\n",
     "\n",
     "## Learning Objectives\n",
-    "- **The goal of this lab is to monitor the performance of your training runs with different GPT training configurations **\n",
+    "The goal of this lab is to monitor the performance of your training runs with different GPT training configurations \n",
     "    - motivation : why should we care ? \n",
     "    \n",
     "    Answer : bad config result in very low / inconsistent gpus utilizations which in turn, slow down training and therefore longer experiments per run, it's a lose-lose-lose situation on all sides.\n",
@@ -25,12 +23,12 @@
     "        - starts with multiGPUs \n",
     "    - challenge : beat the record !\n",
     "\n",
-    "it is possible to obtain more than 80% GPU utilizations overall with high tensorcore ops sustained throughout during **training** for all gpus \n"
+    "Note: it is possible to obtain more than 80% GPU utilizations overall with high tensorcore ops sustained throughout during **training** for all gpus.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "linear-broad",
+   "id": "rough-penny",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "olympic-usage",
+   "id": "dominican-candle",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bacterial-sunset",
+   "id": "therapeutic-pizza",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -64,9 +62,9 @@
     "<center><img src=\"./Megatron-LM/pics/Alt_callout2terminals.JPG\" width=\"600\"/></center>\n",
     "\n",
     "\n",
-    "         ----- launch profiling sessions to record: visualize on Nsight( please use Nsight Systems version >=2021.3.1 ) ----\n",
+    "         ----- launch profiling sessions to record: visualize on Nsight( please use Nsight Systems version >=2021.4.1 ) ----\n",
     "         \n",
-    "[Installing Nsight](https://developer.nvidia.com/gameworksdownload#?dn=nsight-systems-2021-3-1-54)\n",
+    "[Installing Nsight](https://developer.nvidia.com/gameworksdownload#?dn=nsight-systems-2021-4-1)\n",
     "\n",
     "[User Guide](https://docs.nvidia.com/nsight-systems/UserGuide/index.html)\n",
     "\n",
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brave-armstrong",
+   "id": "immune-chambers",
    "metadata": {},
    "source": [
     "---\n",
@@ -86,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "russian-hydrogen",
+   "id": "false-imagination",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "joint-magnitude",
+   "id": "magnetic-uncertainty",
    "metadata": {},
    "source": [
     "---\n",
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aerial-tunnel",
+   "id": "utility-narrative",
    "metadata": {},
    "source": [
     "---\n",
@@ -143,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "previous-gamma",
+   "id": "large-saint",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "static-shelf",
+   "id": "cognitive-harrison",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handled-reference",
+   "id": "subject-genesis",
    "metadata": {},
    "source": [
     "---\n",
@@ -462,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "incident-bridal",
+   "id": "delayed-renewal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "touched-broadcasting",
+   "id": "thorough-credits",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -504,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suffering-designer",
+   "id": "concrete-acrobat",
    "metadata": {},
    "source": [
     "---\n",
@@ -515,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "complicated-wales",
+   "id": "serious-finance",
    "metadata": {},
    "outputs": [
     {
@@ -808,19 +806,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "checked-mobile",
+   "id": "piano-martial",
    "metadata": {},
    "source": [
     "--------------------------------------------------\n",
     "-----\n",
     "visualizing the profiles via nsight should look similar to the following \n",
-    "<center><img src=\"./Megatron-LM/pics/GPUs_utils_naive.JPG\" width=\"1000\"/></center>\n",
-    "<center><img src=\"./Megatron-LM/pics/multigpu_naive_run.jpg\" width=\"1000\"/></center>\n"
+    "<center><img src=\"./Megatron-LM/pics/GPUs_utils_naive.JPG\" width=\"1000\"/></center>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eight-consciousness",
+   "id": "satisfied-private",
    "metadata": {},
    "source": [
     "---\n",
@@ -848,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "musical-bowling",
+   "id": "architectural-forum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "plain-behavior",
+   "id": "phantom-astronomy",
    "metadata": {},
    "source": [
     "---\n",
@@ -868,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "induced-weekend",
+   "id": "varied-breakdown",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breeding-favor",
+   "id": "neural-leisure",
    "metadata": {},
    "source": [
     "--------------------------------------------------\n",
@@ -1163,7 +1160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "first-dublin",
+   "id": "muslim-channel",
    "metadata": {},
    "source": [
     "<a id=\"TheChallenge\"></a>"
@@ -1171,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "durable-annual",
+   "id": "toxic-consideration",
    "metadata": {},
    "source": [
     "----------------\n",
@@ -1189,8 +1186,8 @@
     " \n",
     "\n",
     "\n",
-    "task: modify the [profiling bash script](./Megatron-LM/profile_2nd_run.sh) and rerun \n",
-    "<a href=\"./Day2-5_Observe_GPT_runs_vs_performance.ipynb#Rerun_Cell\">Jump to ReRun Cell</a> \n",
+    "task: modify this --> [profiling bash script](./Megatron-LM/profile_2nd_run.sh) and rerun \n",
+    "<a href=\"./Day2-5_Observe_GPT_runs_vs_performance.ipynb#Rerun_Cell\">GO to ReRun Cell</a> \n",
     "monitor the training runs to get an overall >80% gpu utils in **training** runs \n",
     "\n",
     "```\n",
@@ -1210,7 +1207,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "multiple-wonder",
+   "id": "chemical-overview",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "## Additional Resources\n",
+    "\n",
+    "NVIDIA Nsight Systems : https://docs.nvidia.com/nsight-systems/index.html\n",
+    "\n",
+    "NVTX Tutorial : https://developer.nvidia.com/blog/nvidia-tools-extension-api-nvtx-annotation-tool-for-profiling-code-in-python-and-c-c/\n",
+    "\n",
+    "Nsight Systems : https://developer.nvidia.com/blog/transitioning-nsight-systems-nvidia-visual-profiler-nvprof/\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "precise-baking",
    "metadata": {},
    "source": [
     "---\n",
@@ -1220,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comprehensive-spirituality",
+   "id": "complete-birmingham",
    "metadata": {},
    "source": [
     "-----\n",
