--- a/ai/Megatron/English/Python/jupyter_notebook/Day3-3_train_own_GPT2BPETokenizer.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day3-3_train_own_GPT2BPETokenizer.ipynb
@@ -2,33 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "coated-analyst",
+   "id": "respected-vintage",
    "metadata": {},
    "source": [
-    "# \n",
-    "\n",
     "# Train your own GPT compatible Tokenzer and obtain vocab.json & merges.txt\n",
     "---\n",
     "\n",
     "## Learning Objectives\n",
-    "- **The goal of this lab is to show you how to train your own GPTBPE tokenizer on your own raw text data **\n",
-    "    - train your own GPT compatible tokenizer given own text data in own langauge\n",
-    "        1. option 1 - load from pretrained vocab and merge files, and fit to the new corpus \n",
-    "        2. option 2 - train a GPT compatible tokenizer from scratch\n",
+    "The goal of this lab is to demonstrate how to train your own GPTBPE tokenizer on your own raw text data \n",
+    "\n",
+    "- train your own GPT compatible tokenizer given own text data in own langauge\n",
+    "    1. option 1 - load from pretrained vocab and merge files, and fit to the new corpus \n",
+    "    2. option 2 - train a GPT compatible tokenizer from scratch\n",
     "\n",
     "we will elaborate how to train your own GPT compatible tokenizer and obtain vocab and merge files\n",
+    "\n",
     "we will be using HuggingFace's ByteLevel BPE Tokenizer and trainer to complete this task\n",
     "\n",
     "--------------------------------------------------------------------------------------------------------------------\n",
-    "we need to install the [HuggingFace Tokenizer library](https://huggingface.co/transformers/installation.html)\n",
-    "\n",
-    "!pip install tokenizers"
+    "First of all, we need to install the [HuggingFace Tokenizer library](https://huggingface.co/transformers/installation.html)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dental-drama",
+   "id": "transsexual-republican",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "alive-spirituality",
+   "id": "golden-retailer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +56,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "communist-shooting",
+   "id": "accepting-simon",
    "metadata": {},
    "source": [
     "-------------------------------------------------------------------------------\n",
-    "## how to use the python script below -       \n",
+    "## How to use the python script below -       \n",
     "  trainGPTTokenizer.py [-h] \n",
     "\n",
     "        optional arguments:\n",
@@ -79,12 +77,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broken-texas",
+   "id": "latin-netscape",
    "metadata": {},
    "source": [
     "---\n",
-    "## load_pretrained vocab and merge files into the trainer and then train on new txt\n",
-    "#### OUTPUT should be similar to the below ---\n",
+    "## Load pretrained vocab and merge files into the trainer and then train on new txt\n",
+    "#### OUTPUT should look similar to the below ---\n",
     "        \n",
     "        loading gpt2bpe english vocab and merge \n",
     "        include minimal special token end of text \n",
@@ -106,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "vulnerable-flour",
+   "id": "visible-setup",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "broad-bradley",
+   "id": "analyzed-pacific",
    "metadata": {},
    "outputs": [
     {
@@ -297,12 +295,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "small-billion",
+   "id": "brown-pickup",
    "metadata": {},
    "source": [
     "---\n",
-    "## train completely from scratch with the raw txt to obtain vocab.json and merges.txt files\n",
-    "#### OUTPUT should be similar to the below ---\n",
+    "## Train completely from scratch with the raw txt to obtain vocab.json and merges.txt files\n",
+    "#### OUTPUT should look similar to the below ---\n",
     "    include minimal special token end of text \n",
     "    [00:00:00] Pre-processing files (914 Mo)            ░░░░░░░░                  0%\n",
     "    [00:00:02] Pre-processing files (914 Mo)            ░░░░░░░░                  1%\n",
@@ -321,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "civil-waste",
+   "id": "pointed-toner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "civilian-addition",
+   "id": "north-reality",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "sunrise-sound",
+   "id": "wireless-galaxy",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +501,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innocent-helping",
+   "id": "requested-sphere",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "## Additional Resources\n",
+    "\n",
+    "HuggingFace Tokenizer Documentation : https://huggingface.co/docs/tokenizers/python/latest/quicktour.html\n",
+    "\n",
+    "Train GPT-2 in your own langauge : https://towardsdatascience.com/train-gpt-2-in-your-own-language-fc6ad4d60171"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "contrary-quantum",
    "metadata": {},
    "source": [
     "---\n",
@@ -517,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "normal-tomato",
+   "id": "sized-google",
    "metadata": {},
    "source": [
     "-----\n",
