--- a/ai/Megatron/English/Python/jupyter_notebook/Day3-4_customize_process2mmap.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day3-4_customize_process2mmap.ipynb
@@ -2,71 +2,70 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cooked-laser",
+   "id": "increased-rehabilitation",
    "metadata": {},
    "source": [
-    "# \n",
-    "\n",
-    "# 3_Jsonfy and preprocess to mmap format for optimizing data loading\n",
+    "# Jsonfy and preprocess to mmap format for optimizing data loading\n",
     "---\n",
     "\n",
     "## Learning Objectives\n",
-    "- **The goal of this lab is to re-use the knowledge we gain from Day 2 and utilize that knowledge to jsonfy our cleaned text data and convert to mmap format**\n",
-    "    -  jsonfy the extract webnyheter2013.txt --> webnyheter2013.json\n",
-    "    -  mini-challenge - \n",
-    "        - task 1 : integrate a customized sentence splitter into the preprocess_data.py, let's call it MYpreprocess_data.py  \n",
-    "                        \n",
-    "                        ---------the customized sentence splitter is this function below ------------\n",
-    "        \n",
-    "                            import re\n",
-    "                            import nltk\n",
-    "                            from nltk.tokenize import sent_tokenize\n",
-    "                            def normal_cut_sentence(temp):\n",
-    "                                return sent_tokenize(temp)\n",
+    "The goal of this lab is to re-use the knowledge we gain from Day 2 and utilize that knowledge to jsonfy our cleaned text data and convert to mmap format\n",
     "\n",
-    "                            def cut_sentence_with_quotation_marks(text):\n",
-    "                                p = re.compile(\"“.*?”\")\n",
-    "                                list = []\n",
-    "                                index = 0\n",
-    "                                length = len(text)\n",
-    "                                for i in p.finditer(text):\n",
-    "                                    temp = ''\n",
-    "                                    start = i.start()\n",
-    "                                    end = i.end()\n",
-    "                                    for j in range(index, start):\n",
-    "                                        temp += text[j]\n",
-    "                                    if temp != '':\n",
-    "                                        temp_list = normal_cut_sentence(temp)\n",
-    "                                        list += temp_list\n",
-    "                                    temp = ''\n",
-    "                                    for k in range(start, end):\n",
-    "                                        temp += text[k]\n",
-    "                                    if temp != ' ':\n",
-    "                                        list.append(temp)\n",
-    "                                    index = end\n",
-    "                                return list\n",
-    "        \n",
-    "        task 2 : succesfully run the new MYpreprocess_data.py on example dataset **./Megatron-LM/dataset/EN/extractedNVblogs.json** \n",
+    "-  convert the extract webnyheter2013.txt --> webnyheter2013.json\n",
+    "-  mini-challenge - \n",
+    "    - task 1 : integrate a customized sentence splitter into the preprocess_data.py, let's call it MYpreprocess_data.py  \n",
     "\n",
-    "            hint : open ./Megatron-LM/tools/MYpreprocess_data.py and modify the class between L55 -L91 in \n",
-    "             \n",
-    "        ![modify the class below](./Megatron-LM/pics/customize_preprocess_data_script.JPG)\n",
-    "            \n"
+    "                    ---------the customized sentence splitter is this function below ------------\n",
+    "\n",
+    "                        import re\n",
+    "                        import nltk\n",
+    "                        from nltk.tokenize import sent_tokenize\n",
+    "                        def normal_cut_sentence(temp):\n",
+    "                            return sent_tokenize(temp)\n",
+    "\n",
+    "                        def cut_sentence_with_quotation_marks(text):\n",
+    "                            p = re.compile(\"“.*?”\")\n",
+    "                            list = []\n",
+    "                            index = 0\n",
+    "                            length = len(text)\n",
+    "                            for i in p.finditer(text):\n",
+    "                                temp = ''\n",
+    "                                start = i.start()\n",
+    "                                end = i.end()\n",
+    "                                for j in range(index, start):\n",
+    "                                    temp += text[j]\n",
+    "                                if temp != '':\n",
+    "                                    temp_list = normal_cut_sentence(temp)\n",
+    "                                    list += temp_list\n",
+    "                                temp = ''\n",
+    "                                for k in range(start, end):\n",
+    "                                    temp += text[k]\n",
+    "                                if temp != ' ':\n",
+    "                                    list.append(temp)\n",
+    "                                index = end\n",
+    "                            return list\n",
+    "\n",
+    "    task 2 : succesfully run the new MYpreprocess_data.py on example dataset **./Megatron-LM/dataset/EN/extractedNVblogs.json** \n",
+    "\n",
+    "        hint : open ./Megatron-LM/tools/MYpreprocess_data.py and modify the class between L55 -L91 in \n",
+    "\n",
+    "    ![modify the class below](./Megatron-LM/pics/customize_preprocess_data_script.JPG)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "incorporate-episode",
+   "id": "better-palmer",
    "metadata": {},
    "source": [
     "---\n",
-    "## jsonfy the extract webnyheter2013.txt --> webnyheter2013.json"
+    "## Jsonfy the extract webnyheter2013.txt --> webnyheter2013.json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "whole-compensation",
+   "id": "flush-monitoring",
    "metadata": {},
    "outputs": [
     {
@@ -86,17 +85,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valued-insulation",
+   "id": "retired-wellington",
    "metadata": {},
    "source": [
     "---\n",
-    "# run through the default preprocess_data.py to obtain the xxx.idx and xxx.bin files"
+    "## Run through the default preprocess_data.py to obtain the xxx.idx and xxx.bin files"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "sonic-router",
+   "id": "entitled-burner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "accurate-democracy",
+   "id": "measured-protest",
    "metadata": {},
    "outputs": [
     {
@@ -12663,7 +12662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "completed-aquarium",
+   "id": "rational-charlotte",
    "metadata": {},
    "source": [
     "---\n",
@@ -12673,7 +12672,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "wrong-delivery",
+   "id": "direct-combining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12683,7 +12682,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "innocent-contributor",
+   "id": "labeled-vegetation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12718,7 +12717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acquired-examination",
+   "id": "civic-training",
    "metadata": {},
    "source": [
     "----------------\n",
@@ -12737,7 +12736,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "wired-adult",
+   "id": "aerial-incentive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12951,7 +12950,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "interpreted-london",
+   "id": "numerical-jason",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12964,21 +12963,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ready-happening",
+   "id": "fifth-foster",
    "metadata": {},
    "source": [
     "---\n",
-    "## below is a ReRun cell overwrite MYpreprocess_data.py\n",
+    "## Below is a ReRun cell to overwrite MYpreprocess_data.py\n",
+    "\n",
     "Run the below MYpreprocess_data.py successfully to obtain CustomSentenceSplitter_text_document.idx and CustomSentenceSplitter_text_document.idx file\n",
     "<a id=\"Rerun_Cell\"></a>\n",
     "\n",
-    "Go to cell above to modify MYpreprocess_data.py <a href=\"./Day3-4_customize_process2mmap.ipynb#MODIFY_CELL\">Jump to Modify MYpreprocess_data.py</a> "
+    "Go back and modify MYpreprocess_data.py, shortcut link here--> <a href=\"./Day3-4_customize_process2mmap.ipynb#MODIFY_CELL\">Jump to Modify MYpreprocess_data.py</a> "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "identical-rugby",
+   "id": "japanese-stations",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12997,7 +12997,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "hearing-algorithm",
+   "id": "broad-legend",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -25557,7 +25557,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "happy-violation",
+   "id": "above-scholarship",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -25584,18 +25584,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "incorrect-apache",
+   "execution_count": null,
+   "id": "patient-haiti",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: cannot remove './Megatron-LM/tools/MYpreprocess_data.py': No such file or directory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## clean up\n",
     "!rm ./Megatron-LM/tools/MYpreprocess_data.py"
@@ -25603,7 +25595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "according-muscle",
+   "id": "embedded-excerpt",
    "metadata": {},
    "source": [
     "---\n",
@@ -25617,7 +25609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reverse-subcommittee",
+   "id": "smart-snake",
    "metadata": {},
    "source": [
     "-----\n",
