--- a/ai/Megatron/English/Python/jupyter_notebook/Day3-5_run_Megatron_with_varying_config.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day3-5_run_Megatron_with_varying_config.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "charged-allen",
+   "id": "theoretical-diary",
    "metadata": {},
    "source": [
-    "# \n",
-    "\n",
-    "# 5 Monitor GPT training performance with varying config\n",
+    "# Monitor GPT training performance with varying config\n",
     "---\n",
     "\n",
     "## **Challenge ** - Go big or go home !\n",
     "- prerequisites : \n",
-    "    - use your current given # of gpus \n",
+    "    - use your current given # of gpus\n",
     "    - do NOT changing the following parameters **--train-samples 100 **\n",
     "    - you cannot go OOM \n",
     "    - you must sustain >60% GPUs utilization in the **training** phase \n",
@@ -20,29 +18,29 @@
     "\n",
     "\n",
     "- task : \n",
-    "        given the above constraints, train as BIG GPT model as possible\n",
+    "        given the above prerequisites, train as BIG a GPT model as possible\n",
     "\n",
     "\n",
     "\n",
     "- winning criteria : the biggest model wins given the above constraints(=prerequisites).\n",
     "\n",
-    "    <a href=\"./Day3-5_run_Megatron_with_varying_config.ipynb#Rerun_Cell\">Jump to ReRun Cell</a> \n",
+    "    Go directly to the challenge , link here --> <a href=\"./Day3-5_run_Megatron_with_varying_config.ipynb#Rerun_Cell\">Jump to ReRun Cell</a> \n",
     "\n",
     "```\n",
-    "                                #### the follow params are allowed to change \n",
-    "                                WORLD_SIZE=8 # <--- remember to change the number of GPUs you actually have in your system\n",
-    "                                GPUS_PER_NODE=8 # <--- remember to change the number of GPUs you actually have in your system\n",
+    "                        #### the follow params are allowed to change \n",
+    "                        WORLD_SIZE=8 # <--- remember to change the number of GPUs you actually have in your system\n",
+    "                        GPUS_PER_NODE=8 # <--- remember to change the number of GPUs you actually have in your system\n",
     "\n",
-    "                                TENSOR_MP_SIZE=8\n",
-    "                                PIPELINE_MP_SIZE=1\n",
-    "                                LYS=32\n",
-    "                                HIDDEN_SZ=2048\n",
-    "                                NUM_ATTN_HEADS=32\n",
-    "                                MICRO_BZ=\n",
-    "                                GLOBAL_BZ=\n",
-    "                                SEQ_LEN=\n",
-    "                                MAX_POS_EM=\n",
-    "                                #### ---------------------------#### \n",
+    "                        TENSOR_MP_SIZE=8\n",
+    "                        PIPELINE_MP_SIZE=1\n",
+    "                        LYS=32\n",
+    "                        HIDDEN_SZ=2048\n",
+    "                        NUM_ATTN_HEADS=32\n",
+    "                        MICRO_BZ=\n",
+    "                        GLOBAL_BZ=\n",
+    "                        SEQ_LEN=\n",
+    "                        MAX_POS_EM=\n",
+    "                        #### ---------------------------#### \n",
     "``` \n",
     "                                ----------------------------For your reference --------------------------\n",
     "<center><img src=\"./Megatron-LM/pics/GPT3_all.png\" width=\"700\"/></center>"
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuing-passport",
+   "id": "gross-macro",
    "metadata": {},
    "source": [
     "---\n",
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corrected-bacteria",
+   "id": "human-classics",
    "metadata": {},
    "source": [
     "---\n",
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dramatic-opinion",
+   "id": "finnish-think",
    "metadata": {},
    "source": [
     "<a id=\"Rerun_Cell\"></a>"
@@ -83,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "massive-industry",
+   "id": "saving-locator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "understood-swimming",
+   "id": "adverse-genetics",
    "metadata": {},
    "outputs": [
     {
@@ -175,11 +173,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "monetary-trial",
+   "id": "ecological-delaware",
    "metadata": {},
    "source": [
     "---\n",
-    "## check how big is your model - \n",
+    "## Check how big is your model - \n",
     "modify the parameters in the [params_cnt.sh](./params_cnt.sh)\n",
     "I got 6 Billion :)  what about you ?"
    ]
@@ -187,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "afraid-promise",
+   "id": "latin-granny",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "portuguese-freedom",
+   "id": "widespread-sunset",
    "metadata": {},
    "source": [
     "---\n",
@@ -229,13 +227,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competent-romania",
+   "id": "standing-change",
    "metadata": {},
    "source": [
     "---\n",
     "# Re-run this cell below to get an even bigger GPT model\n",
-    "## remember to modify the [params count](./params_cnt.sh) to check how big is your model\n",
-    "## click the below to go back to Modify the profile_SVGPT_BIG.sh \n",
+    "\n",
+    "Remember to modify the [params count](./params_cnt.sh) to check how big is your model\n",
+    "\n",
+    "Jump back and mdify the profile_SVGPT_BIG.sh, click here --> \n",
     "<a href=\"./Day3-5_run_Megatron_with_varying_config.ipynb#MODIFY_CELL\">Jump back to modify and overwrite profile_SVGPT_BIG.sh </a> \n",
     "<a id=\"Rerun_Cell\"></a>"
    ]
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "injured-pasta",
+   "id": "novel-campbell",
    "metadata": {},
    "outputs": [
     {
@@ -550,16 +550,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entertaining-transparency",
+   "id": "center-microphone",
    "metadata": {},
    "source": [
-    "## Remember to copy and paste your output on Slack or Zoom\n",
+    "--- \n",
+    "\n",
+    "## Additional Resources\n",
+    "\n",
+    "Language Models are Few-Shot Learners : https://arxiv.org/pdf/2005.14165.pdf\n",
+    "\n",
+    "Efficient Large-Scale Language Model Training on GPU Clusters : https://arxiv.org/pdf/2104.04473.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "basic-horror",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
     "## Congratulations on completing the mission !\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "hidden-minister",
+   "id": "recovered-pleasure",
    "metadata": {},
    "source": [
     "-----\n",
