--- a/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-1_acquiring_data.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-1_acquiring_data.ipynb
@@ -2,29 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ahead-surrey",
+   "id": "above-newark",
    "metadata": {},
    "source": [
-    "# \n",
-    "\n",
     "# Fetch Swedish data on your own \n",
     "---\n",
     "\n",
     "## Due to GDPR , we are not allowed to provide data to attendees in the bootcamp !\n",
-    "- **Therefore, we kindly ask you to fetch and preprocess the data on your own following the steps given below-  **\n",
+    "Therefore, we kindly ask you to fetch and preprocess this publically accessible dataset on your own,\n",
+    "following the steps given below -\n",
     "    - wget språkbank [webnyheter2013](http://spraakbanken.gu.se/lb/resurser/meningsmangder/webbnyheter2013.xml.bz2)\n",
     "    - wget språkbank [provided script](https://raw.githubusercontent.com/spraakbanken/sb-nltk-tools/master/sb_corpus_reader.py) to extract the data\n",
     "    - use the function below to extract the xml file into raw txt file\n",
     "    - (additional advice) discuss filtering on number of sentences per document and number of tokens per sentence \n",
     "        - example for English GPT training, it is recommand to check on the stats of your raw data and come-up with a good rule-of-thumb to proceed filtering, it is,however,recommanded to look into language-specific cleaning and follow up robust clearning procedure to obtain quality corpus.\n",
     "\n",
-    "in this notebook, we will embrace the method provided by the [Megatron-LM repo](https://github.com/NVIDIA/Megatron-LM/tree/main/tools/openwebtext) as well as introduce other complimenting methods that might be of interest for data cleaning.\n",
-    "\n"
+    "---\n",
+    "## About the data source -\n",
+    "This data belongs to Språkbanken, Språkbanken Text is a research unit and part of the National Language Bank, a national e-infrastructure to support research based on linguistic data.\n",
+    "[read more about språkbank](https://spraakbanken.gu.se/om)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "exterior-avatar",
+   "id": "prepared-shield",
    "metadata": {},
    "source": [
     "--------------------------------------------------------------------------------------------------------------------\n",
@@ -34,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "yellow-happening",
+   "id": "painted-broadway",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "happy-spectrum",
+   "id": "unavailable-munich",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "modular-helmet",
+   "id": "fantastic-throat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "roman-strap",
+   "id": "saved-potter",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "moderate-newfoundland",
+   "id": "pleasant-estimate",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "annoying-topic",
+   "id": "psychological-measure",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "exterior-episode",
+   "id": "conservative-yacht",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impaired-sierra",
+   "id": "thousand-volleyball",
    "metadata": {},
    "source": [
     "---\n",
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "junior-washington",
+   "id": "similar-battery",
    "metadata": {},
    "source": [
     "-----\n",
