--- a/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-Website_scrapping.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-Website_scrapping.ipynb
@@ -2,35 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "grave-judges",
+   "id": "magnetic-filter",
    "metadata": {},
    "source": [
-    "# \n",
+    "# Get Your Own Data via webcrawling the website / webpages you have permisson to use\n",
     "\n",
-    "# (option) : get your own data via scrap the website you have permisson to use\n",
+    "note_1 : strongly recommand to consult with your own legal department for compliance before proceeding this step on websites/webpages you have permission to\n",
     "\n",
-    "note1 : strongly recommand to consult with your own legal department for compliance before proceeding this step on websites/webpages you have permission to\n",
+    "note_2 : modification needed when applying to different website/webpages\n",
     "\n",
-    "note2 : modification needed when applying to different website/webpages\n",
-    "\n",
-    "note3 : use at your own risk !\n",
+    "note_3 : use at your own risk !\n",
     "\n",
     "---\n",
     "\n",
     "## Learning Objectives\n",
-    "- **The goal of this lab is to demonstrate that there are ways to obtain your own data via webscrapping sites which you have permission to**\n",
-    "    - Provide a list of urls in a text file via collecting webpages links\n",
+    "The goal of this lab is to demonstrate the fact that, there are ways to obtain your own data, the example given below is to crawl the webpages, from a seeding url, with the end goal of obtaining the raw texts. Please double check you have permission to extract the content of these webpages.\n",
+    "\n",
+    "- Provide a list of urls in a text file via collecting webpages links \n",
     "    \n",
-    "    the base url used to crawl links from is  https://developer.nvidia.com/blog/\n",
+    "the base url used to crawl links from is  https://developer.nvidia.com/blog/\n",
     "    \n",
-    "    - scrap the webpage ( in html format ) using [scrapy](https://docs.scrapy.org/en/latest/index.html) and obtain desired text, concatenate text per webpage into one raw text file\n",
-    "\n"
+    "- scrap the webpage ( in html format ) using [scrapy](https://docs.scrapy.org/en/latest/index.html) and obtain raw text, then concatenate all the raw text per webpage into one text file\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "responsible-steering",
+   "id": "contained-collection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pretty-brooklyn",
+   "id": "found-people",
    "metadata": {},
    "source": [
     "## crawl NVblog landing page and obtain links to the individual blogs\n",
@@ -53,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "interstate-kernel",
+   "id": "humanitarian-democracy",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "extraordinary-enforcement",
+   "id": "healthy-condition",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patient-hudson",
+   "id": "structured-curve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "american-offset",
+   "id": "elect-moldova",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "blind-opportunity",
+   "id": "blind-chess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-firmware",
+   "id": "agricultural-spiritual",
    "metadata": {},
    "source": [
     "## fetch the urls of interest and convert to html files \n",
@@ -371,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "mighty-treat",
+   "id": "animated-europe",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integrated-court",
+   "id": "responsible-killing",
    "metadata": {},
    "source": [
     "## fetch given url and save as .html file"
@@ -411,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "authorized-convertible",
+   "id": "cordless-inside",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "multiple-supervision",
+   "id": "virtual-superior",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "offensive-swedish",
+   "id": "suffering-surgery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "atmospheric-bangladesh",
+   "id": "apparent-cartoon",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medical-cabinet",
+   "id": "yellow-municipality",
    "metadata": {},
    "source": [
     "---\n",
@@ -573,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "minus-travel",
+   "id": "smart-opinion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demanding-accountability",
+   "id": "vietnamese-constant",
    "metadata": {},
    "source": [
     "---\n",
@@ -592,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fresh-thirty",
+   "id": "norman-administrator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "variable-tamil",
+   "id": "designed-marine",
    "metadata": {},
    "source": [
     "--- \n",
@@ -614,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "front-batman",
+   "id": "christian-austria",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +629,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "burning-humor",
+   "id": "athletic-james",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "## Additional Resources\n",
+    "\n",
+    "scrapy : https://docs.scrapy.org/en/latest/\n",
+    "\n",
+    "beautifulsoup : https://beautiful-soup-4.readthedocs.io/en/latest/\n",
+    "\n",
+    "selenium : https://www.selenium.dev/selenium/docs/api/py/index.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "failing-australian",
    "metadata": {},
    "source": [
     "## Back To Start Menu\n",
@@ -640,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "guilty-strand",
+   "id": "seven-contrary",
    "metadata": {},
    "source": [
     "--- \n",
